if (NOT NO_TRANSPORT)
add_executable(pairwise pairwise.cc)
add_executable(collective collective.cc)
add_executable(failure failure.cc)
endif()
add_executable(thread_safe_classes thread_safe_classes.cc)
add_executable(thread_safe_refcount thread_safe_refcount.cc)

include_directories( "${CMAKE_SOURCE_DIR}" )

if (NOT NO_TRANSPORT)
target_link_libraries(pairwise dharma_api)
target_link_libraries(collective dharma_api)
target_link_libraries(failure dharma_api)
target_link_libraries(thread_safe_classes dharma_api)
target_link_libraries(thread_safe_refcount dharma_api)
else()
target_link_libraries(thread_safe_classes dharma_api pthread)
target_link_libraries(thread_safe_refcount dharma_api pthread)
endif()

function(add_unit_test test_name)
if (SST)
add_test(${test_name} ${CMAKE_CURRENT_BINARY_DIR}/${test_name} -f ${CMAKE_CURRENT_SOURCE_DIR}/ini/unittest.ini)
else()
add_test(${test_name} ${CMAKE_CURRENT_BINARY_DIR}/${test_name})
endif()
set_tests_properties(${test_name} PROPERTIES TIMEOUT 5 FAIL_REGULAR_EXPRESSION "FAILURE" PASS_REGULAR_EXPRESSION "SUCCESS")
endfunction()

add_unit_test(thread_safe_classes)
add_unit_test(thread_safe_refcount)
